Aaron: Updated the editor to startup on our map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=AcademicExamples
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/HideAndSeekMap.HideAndSeekMap
-GameDefaultMap=/Game/Maps/HideAndSeekMap.HideAndSeekMap
+EditorStartupMap=/Game/Maps/DeepInfection_Map.DeepInfection_Map
+GameDefaultMap=/Game/Maps/DeepInfection_Map.DeepInfection_Map
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
