--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,9 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=76DCED5B4E3949583FE022B7F1F32E94
-ProjectName=Third Person BP Game Template
+ProjectName=Deep Infection
+Description=Our amazing Unreal 5 Game
+CompanyName=C&A Industries
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
-
 
